--- a/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter/pubspec.yaml
@@ -2,7 +2,7 @@ name: google_maps_flutter
 description: A Flutter plugin for integrating Google Maps in iOS and Android applications.
 repository: https://github.com/flutter/packages/tree/main/packages/google_maps_flutter/google_maps_flutter
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+maps%22
-version: 2.7.1
+version: 2.7.0
 
 environment:
   sdk: ^3.4.0
@@ -22,11 +22,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter_android: ^2.9.0
-  google_maps_flutter_ios:
-    git:
-      url: https://github.com/Colman/packages.git
-      ref: maps-ios-improve-marker-performance
-      path: packages/google_maps_flutter/google_maps_flutter_ios
+  google_maps_flutter_ios: ^2.7.0
   google_maps_flutter_platform_interface: ^2.7.0
   google_maps_flutter_web: ^0.5.8
 
