--- a/packages/google_maps_flutter/google_maps_flutter_ios/example/ios15/pubspec.yaml
+++ b/packages/google_maps_flutter/google_maps_flutter_ios/example/ios15/pubspec.yaml
@@ -28,6 +28,13 @@ dev_dependencies:
   integration_test:
     sdk: flutter
 
+# FOR TESTING ONLY. DO NOT MERGE.
+dependency_overrides:
+  google_maps_flutter_ios:
+    path: ../../../../google_maps_flutter/google_maps_flutter_ios
+  google_maps_flutter_platform_interface:
+    path: ../../../../google_maps_flutter/google_maps_flutter_platform_interface
+
 flutter:
   uses-material-design: true
   assets:
