--- a/packages/shared_preferences/shared_preferences_web/example/pubspec.yaml
+++ b/packages/shared_preferences/shared_preferences_web/example/pubspec.yaml
@@ -2,8 +2,8 @@ name: shared_preferences_web_integration_tests
 publish_to: none
 
 environment:
-  sdk: ">=3.2.0 <4.0.0"
-  flutter: ">=3.16.0"
+  sdk: ^3.3.0
+  flutter: ">=3.19.0"
 
 dependencies:
   flutter:
@@ -11,7 +11,7 @@ dependencies:
   shared_preferences_platform_interface: ^2.4.0
   shared_preferences_web:
     path: ../
-  web: ^0.5.0
+  web: ^1.0.0
 
 dev_dependencies:
   flutter_test:
