--- a/packages/google_adsense/pubspec.yaml
+++ b/packages/google_adsense/pubspec.yaml
@@ -1,12 +1,12 @@
 name: google_adsense
-description: Google Adsense plugin for Flutter Web
+description: A wrapper plugin with convenience APIs allowing easier inserting Google Adsense HTML snippets withing a Flutter UI Web application
 repository: https://github.com/flutter/packages/tree/main/packages/google_adsense
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+google_adsense%22
 version: 0.0.1
 
 environment:
-  sdk: ^3.1.0
-  flutter: ^1.17.0
+  sdk: ^3.3.0
+  flutter: ^3.19.0
 
 dependencies:
   flutter:
@@ -14,12 +14,9 @@ dependencies:
   web: ^0.5.1
 
 dev_dependencies:
-  build_runner: ^2.4.9
-  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  mockito: ^5.4.4
-  test: ^1.24.9
+
 
 topics:
   - monetization
