--- a/packages/interactive_media_ads/pubspec.yaml
+++ b/packages/interactive_media_ads/pubspec.yaml
@@ -34,7 +34,7 @@ dev_dependencies:
   pigeon:
     git:
       url: git@github.com:bparrishMines/packages.git
-      ref: kotlin_test_helper
+      ref: pigeon_kotlin_split
       path: packages/pigeon
 
 topics:
