--- a/packages/camera/camera_android_camerax/example/android/app/src/main/AndroidManifest.xml
+++ b/packages/camera/camera_android_camerax/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.flutter.plugins.cameraxexample">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
    <application
         android:label="camera_android_camerax_example"
