--- a/packages/webview_flutter/webview_flutter/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/packages/webview_flutter/webview_flutter/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = example
+PRODUCT_NAME = webview_flutter_example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = dev.flutter.plugins.example
+PRODUCT_BUNDLE_IDENTIFIER = dev.flutter.plugins.webview_flutter_example
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 dev.flutter.plugins. All rights reserved.
