--- a/packages/flutter_migrate/pubspec.yaml
+++ b/packages/flutter_migrate/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_migrate
 description: A tool to migrate legacy flutter projects to modern versions.
-version: 0.0.1+4
+version: 0.1.1+1
 repository: https://github.com/flutter/packages/tree/main/packages/flutter_migrate
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3Ap%3A%20flutter_migrate
 publish_to: none
@@ -12,15 +12,16 @@ dependencies:
   args: ^2.3.1
   convert: ^3.0.2
   file:  ">=6.0.0 <8.0.0"
-  intl: ">=0.17.0 <0.20.0"
+  intl: ">=0.17.0 <0.21.0"
   meta: ^1.8.0
   path: ^1.8.0
-  process: ^4.2.4
-  vm_service: ^9.3.0
+  process: ^5.0.5
+  vm_service: ^15.0.2
   yaml: ^3.1.1
 
 dev_dependencies:
+  build_runner: ^2.7.0
   collection: ^1.16.0
   file_testing: ^3.0.0
-  lints: ^2.0.0
+  lints: ^6.0.0
   test: ^1.16.0
