--- a/packages/image_picker/image_picker/pubspec.yaml
+++ b/packages/image_picker/image_picker/pubspec.yaml
@@ -28,13 +28,13 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker_android: ^0.8.7
-  image_picker_for_web: ">=2.2.0 <4.0.0"
-  image_picker_ios: ^0.8.8
-  image_picker_linux: ^0.2.1
-  image_picker_macos: ^0.2.1
+  image_picker_android: ^0.8.13
+  image_picker_for_web: ^3.1.0
+  image_picker_ios: ^0.8.13
+  image_picker_linux: ^0.2.2
+  image_picker_macos: ^0.2.2
   image_picker_platform_interface: ^2.11.0
-  image_picker_windows: ^0.2.1
+  image_picker_windows: ^0.2.2
 
 dev_dependencies:
   build_runner: ^2.1.10
@@ -49,12 +49,3 @@ topics:
   - image-picker
   - files
   - file-selection
-# FOR TESTING AND INITIAL REVIEW ONLY. DO NOT MERGE.
-# See https://github.com/flutter/flutter/blob/master/docs/ecosystem/contributing/README.md#changing-federated-plugins
-dependency_overrides:
-  image_picker_android: {path: ../../../packages/image_picker/image_picker_android}
-  image_picker_for_web: {path: ../../../packages/image_picker/image_picker_for_web}
-  image_picker_ios: {path: ../../../packages/image_picker/image_picker_ios}
-  image_picker_linux: {path: ../../../packages/image_picker/image_picker_linux}
-  image_picker_macos: {path: ../../../packages/image_picker/image_picker_macos}
-  image_picker_windows: {path: ../../../packages/image_picker/image_picker_windows}
