--- a/packages/google_sign_in/google_sign_in/pubspec.yaml
+++ b/packages/google_sign_in/google_sign_in/pubspec.yaml
@@ -24,14 +24,10 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  google_sign_in_android:
-    path: ../google_sign_in_android
-  google_sign_in_ios:
-    path: ../google_sign_in_ios
-  google_sign_in_platform_interface:
-    path: ../google_sign_in_platform_interface
-  google_sign_in_web:
-    path: ../google_sign_in_web
+  google_sign_in_android: ^7.0.0
+  google_sign_in_ios: ^6.0.0
+  google_sign_in_platform_interface: ^3.0.0
+  google_sign_in_web: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.1.10
@@ -52,3 +48,10 @@ false_secrets:
   - /example/ios/RunnerTests/GoogleService-Info.plist
   - /example/ios/RunnerTests/GoogleSignInTests.m
   - /example/macos/Runner/Info.plist
+# FOR TESTING AND INITIAL REVIEW ONLY. DO NOT MERGE.
+# See https://github.com/flutter/flutter/blob/master/docs/ecosystem/contributing/README.md#changing-federated-plugins
+dependency_overrides:
+  google_sign_in_android: {path: ../../../packages/google_sign_in/google_sign_in_android}
+  google_sign_in_ios: {path: ../../../packages/google_sign_in/google_sign_in_ios}
+  google_sign_in_platform_interface: {path: ../../../packages/google_sign_in/google_sign_in_platform_interface}
+  google_sign_in_web: {path: ../../../packages/google_sign_in/google_sign_in_web}
