--- a/packages/google_sign_in/google_sign_in_android/pubspec.yaml
+++ b/packages/google_sign_in/google_sign_in_android/pubspec.yaml
@@ -20,8 +20,7 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  google_sign_in_platform_interface:
-    path: ../google_sign_in_platform_interface
+  google_sign_in_platform_interface: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.3.0
@@ -38,3 +37,7 @@ topics:
 false_secrets:
   - /example/android/app/google-services.json
   - /example/lib/main.dart
+# FOR TESTING AND INITIAL REVIEW ONLY. DO NOT MERGE.
+# See https://github.com/flutter/flutter/blob/master/docs/ecosystem/contributing/README.md#changing-federated-plugins
+dependency_overrides:
+  google_sign_in_platform_interface: {path: ../../../packages/google_sign_in/google_sign_in_platform_interface}
