--- a/packages/camera/camera/pubspec.yaml
+++ b/packages/camera/camera/pubspec.yaml
@@ -38,3 +38,8 @@ dev_dependencies:
 
 topics:
   - camera
+# FOR TESTING AND INITIAL REVIEW ONLY. DO NOT MERGE.
+# See https://github.com/flutter/flutter/blob/master/docs/ecosystem/contributing/README.md#changing-federated-plugins
+dependency_overrides:
+  camera_android_camerax: {path: ../../../packages/camera/camera_android_camerax}
+  camera_platform_interface: {path: ../../../packages/camera/camera_platform_interface}
