fix java tests, format

--- a/packages/camera/camera_android_camerax/android/build.gradle
+++ b/packages/camera/camera_android_camerax/android/build.gradle
@@ -40,8 +40,8 @@ android {
     }
 
     defaultConfig {
-        // Many of the CameraX APIs require API 21.
-        minSdkVersion 21
+        // CameraX APIs require API 23 or later.
+        minSdkVersion 23
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
