--- a/packages/camera/camera_android_camerax/android/build.gradle
+++ b/packages/camera/camera_android_camerax/android/build.gradle
@@ -41,7 +41,7 @@ android {
 
     defaultConfig {
         // CameraX APIs require API 23 or later.
-        minSdkVersion 23
+        minSdk = 23
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
